src/test/deca/syntax/invalid/prog/test_prog_two_main.deca
// Description:
//    tests de programme avec des erreurs synthaxiques : () au lieu de {}
//
// Resultats:
//    Ligne 11: no viable alternative at input '('
//    
//
// Historique:
//    cree le 01/01/2024

{
    println("Hello world !")
}
{
    println("Hello world !")
}